# ChatApp

./: README.md
ClientApp/: CMakeLists.txt
ClientApp/src/: chatgui.cpp  chatgui.h  client.cpp  client.h  main.cpp  socket.cpp  socket.h
ServerApp/: CMakeLists.txt
ServerApp/src/: chatgui.cpp  chatgui.h  server.cpp  server.h
